# amazon-chime-sdk-js

./: .base-branch  .changelog-watchlist  .eslintignore  .eslintrc.json  .gitignore  .integration-watchlist  .travis.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  NOTICE  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  typedoc.js  typedoc.json
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
config/: eslintrc.json  imports.test.ts  tsconfig.base.json  tsconfig.import.json  tsconfig.json  typedoc.json
docs/: globals.html  hierarchy.html  index.html  modules.html
guides/: .gitignore  01_Getting_Started.md  02_Content_Share.md  03_API_Overview.md  04_Quality_Bandwidth_Connectivity.md  05_Simulcast.md  06_FAQs.md  06_Meeting_Events.md  07_FAQs.md  08_Migration_to_2_0.md  09_Amazon_Voice_Focus.md  10_Video_Processor.md  11_Priority_Based_Downlink_Policy.md  12_Client_Event_Ingestion.md  13_Project_Board.md  14_Content_Security_Policy.md  15_Background_Filter_Video_Processor.md  16_Video_Layout.md  17_Migration_to_3_0.md  18_Replicated_Meetings.md  19_Video_Codecs.md  20_Builders_Journey.md  21_Background_Filter_VideoFX_Processor.md  22_Meeting_Features.md  README.md  index.ts  tsconfig.json
integration/: README.md  eslintrc.json  package-lock.json  package.json
protocol/: ScreenSignalingProtocol.proto  SignalingProtocol.proto
public/: index.html  index.js
script/: NODEMON.json  login.js  (+37 more)
src/jpegdecoder/webassembly/rust/: .gitignore  Cargo.toml  README.md  compile  example-template.html
src/jpegdecoder/webassembly/rust/src/: lib.rs
(+3010 files in other folders)
