[package]
name = "wasm-jpeg-decoder"
version = "1.0.0"
authors = ["Amazon Chime team"]
edition = "2018"
description = "WebAssembly JPEG decoder"
repository = "https://github.com/aws/amazon-chime-sdk-js"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable for debugging
# default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
# default-features must be false. See: https://github.com/image-rs/image/issues/879
jpeg-decoder = {version = "0.1.15", default-features = false}
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
